--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "browserify": "^11.2.0",
+    "express": "^4.13.3",
     "gulp": "^3.9.0",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
