--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vinyl-source-stream": "^1.1.0",
     "superagent": "~1.4.0",
     "body-parser": "~1.14.1",
-    "pg": "~4.4.3"
+    "pg": "~4.4.3",
+    "react-router": "~1.0.0-rc3"
   }
 }
