--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "superagent": "~1.4.0",
     "body-parser": "~1.14.1",
     "pg": "~4.4.3",
-    "react-router": "~1.0.0-rc3"
+    "react-router": "~1.0.0-rc3",
+    "flux": "~2.1.1",
+    "object-assign": "~4.0.1"
   }
 }
