--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "react-router": "1.0.3",
     "reactify": "^1.1.1",
     "superagent": "~1.4.0",
-    "vinyl-source-stream": "^1.1.0",
-    "flux": "~2.1.1",
-    "object-assign": "~4.0.1"
+    "vinyl-source-stream": "^1.1.0"
   }
 }
